fix z-index

--- a/src/Components/TimeStore/TimeStore.css
+++ b/src/Components/TimeStore/TimeStore.css
@@ -2,7 +2,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 8%;
-    z-index: 1000;
+    z-index: 101;
     margin-top: 50px;
 }
 .time-Store .timeStore {
