--- a/src/Components/Top-Menu/TopMenu.css
+++ b/src/Components/Top-Menu/TopMenu.css
@@ -13,9 +13,8 @@
 .container {
   position: sticky;
   position: -webkit-sticky;
-  z-index: 1000;
+  z-index: 1;
   width: 100%;
   top: 0;
-  z-index: 1303;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
 }
